webhook/manifest/hello-dp.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: hello-balance
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-balance
  template:
    metadata:
      labels:
        app: hello-balance
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.4
        name: hello-balance
        ports:
        - containerPort: 8080
