webhook/manifest/webhook-dp.yaml

apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      serviceAccountName: webhook-sa
      containers:
      - name: webhook
        image: wsh
        imagePullPolicy: Never
        ports:
        - containerPort: 443
        volumeMounts:
        - name: webhook-certs
          mountPath: /etc/webhook/certs
      volumes:
      - name: webhook-certs
        secret:
          secretName: webhook-wsh-cert
          optional: true
