webhook/manifest/webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-svc
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: webhook
