webhook/manifest/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook-config
webhooks:
- name: stable.example.com
  rules:
  - operations: ["CREATE"]
    apiGroups: ["stable.example.com"]
    apiVersions: ["v1"]
    resources: ["wsh"]
    scope: "*"
  clientConfig:
    service:
      namespace: default
      name: "webhook-svc"
      path: /crd
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVEVENDQXZXZ0F3SUJBZ0lVWHkxN1NZbk4xcXNLK0xTUzRwN05JNHpkejBvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZTXhDekFKQmdOVkJBWVRBa05PTVFzd0NRWURWUVFJREFKSFJERUxNQWtHQTFVRUJ3d0NVMW94RGpBTQpCZ05WQkFvTUJYWnBhRzl2TVF3d0NnWURWUVFMREFOa1pYWXhJREFlQmdOVkJBTU1GM2RsWW1odmIyc3RjM1pqCkxtUmxabUYxYkhRdWMzWmpNUm93R0FZSktvWklodmNOQVFrQkZndDVlVUIyYVhadkxtTnZiVEFlRncweU1qQTIKTWpreE5UVTFNekJhRncweU1qQTNNamt4TlRVMU16QmFNSUdETVFzd0NRWURWUVFHRXdKRFRqRUxNQWtHQTFVRQpDQXdDUjBReEN6Q [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-config-mwc
webhooks:
- name: pod-inject.stable.example.com
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["v1"]
    resources: ["*/*"]
    scope: "*"
  clientConfig:
    service:
      namespace: default
      name: "webhook-svc"
      path: /pods
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVEVENDQXZXZ0F3SUJBZ0lVWHkxN1NZbk4xcXNLK0xTUzRwN05JNHpkejBvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZTXhDekFKQmdOVkJBWVRBa05PTVFzd0NRWURWUVFJREFKSFJERUxNQWtHQTFVRUJ3d0NVMW94RGpBTQpCZ05WQkFvTUJYWnBhRzl2TVF3d0NnWURWUVFMREFOa1pYWXhJREFlQmdOVkJBTU1GM2RsWW1odmIyc3RjM1pqCkxtUmxabUYxYkhRdWMzWmpNUm93R0FZSktvWklodmNOQVFrQkZndDVlVUIyYVhadkxtTnZiVEFlRncweU1qQTIKTWpreE5UVTFNekJhRncweU1qQTNNamt4TlRVMU16QmFNSUdETVFzd0NRWURWUVFHRXdKRFRqRUxNQWtHQTFVRQpDQXdDUjBReEN6Q [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
